# cmake-cuda-static

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  dummy.cu  dummy.hh  dummy.hxx  dummy_exe.cu
